# benchmark_duckdb_row_creation

./: .gitignore  README.md  conftest.py  pyproject.toml  utils.py
benchmarks/: test_creation.py  utils.py
